# data-pipelines-learning

./: .gitignore  README.md  Suggested Timeline.txt
01-csv-pipeline/: pyproject.toml
01-csv-pipeline/.tmp_dagster_home_4juvsv3w/history/: runs.db
01-csv-pipeline/.tmp_dagster_home_4juvsv3w/history/runs/: d6419118-fcb6-4974-a662-80bba64338d8.db  index.db
01-csv-pipeline/.tmp_dagster_home_4juvsv3w/schedules/: schedules.db
01-csv-pipeline/.tmp_dagster_home_4juvsv3w/storage/: cleaned_df  raw_csv_path  write_clean_csv
01-csv-pipeline/.tmp_dagster_home_8om8cvnl/history/: runs.db
01-csv-pipeline/.tmp_dagster_home_8om8cvnl/history/runs/: index.db
01-csv-pipeline/.tmp_dagster_home_8om8cvnl/schedules/: schedules.db
01-csv-pipeline/.tmp_dagster_home_nnlrwhw0/history/: runs.db
01-csv-pipeline/.tmp_dagster_home_nnlrwhw0/history/runs/: 0ea6c959-4c56-4092-a438-6df19b888204.db  7b68867d-5435-472c-af38-81a6b106eca5.db  8ebd20f6-523f-4396-9dab-a094f03302be.db  index.db  (+2 more)
01-csv-pipeline/.tmp_dagster_home_nnlrwhw0/schedules/: schedules.db
01-csv-pipeline/.tmp_dagster_home_nnlrwhw0/storage/: loaded_df  raw_csv_path  write_clean_csv
01-csv-pipeline/data/: raw.csv
01-csv-pipeline/src/my_dagster_csv/: __init__.py  assets.py
02-api-pipeline/: .gitignore  notes.txt  pyproject.toml
02-api-pipeline/src/my_api_pipeline/: __init__.py  assets_api.py  jobs.py  resources.py  schedules.py
03-postgres-pipeline/: .env  docker-compose.yml  notes.txt  pyproject.toml
03-postgres-pipeline/src/my_pg_pipeline/: __init__.py  assets_csv_to_pg.py  jobs.py  resources.py  schedules.py
